force-app/main/default/objects/OFAC_search_SDN__c/OFAC_search_SDN__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Search for a name using the OFAC SDN API.</description>
    <label>OFAC search SDN</label>
</CustomObject>