force-app/main/default/objects/OFAC_search_SDN__c/fields/API_key__c.field-meta.xml
<CustomField>
    <fullName>API_key__c</fullName>
    <description>Special key for calls from Global Fund for Women</description>
    <inlineHelpText>Special key for calls from Global Fund for Women</inlineHelpText>
    <label>API key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>