force-app/main/default/objects/OFAC_search_SDN__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>The base URL for the api call</description>
    <inlineHelpText>The base URL for the api call</inlineHelpText>
    <label>Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>