force-app/main/default/objects/OFAC_search_SDN__c/fields/Min_score__c.field-meta.xml
<CustomField>
    <fullName>Min_score__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The minimum score required to get a match for the SDN search api call</description>
    <inlineHelpText>The minimum score required to get a match for the SDN search api call</inlineHelpText>
    <label>Min score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>